# stock_prediction_app

./: README.md  server_short.py
project/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  startwindow.cpp  startwindow.h  startwindow.ui  usagewindow.cpp  usagewindow.h  usagewindow.ui
project/server/: sber_ai758.xlsx  server_short.py
